fixed image issue on low resolutions, fixed bug with entertainment section not showing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -68,10 +68,19 @@ body {
   }
 }
 
+
 /* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px ) {
   .container {
     max-width: 730px;
+  }
+  .feed-image {
+    max-width: 200px;
+    max-height: 200px;
+    padding:none;
+    border-radius: 1px;
+    display: block;
+    margin: 0 auto;
   }
 
   /* Remove the padding we set earlier */
@@ -91,40 +100,108 @@ body {
   }
 }
 
+@media screen and (max-width: 768) {
+  .feed-image {
+    max-width: 200px;
+    max-height: 200px;
+    padding:none;
+    border-radius: 1px;
+    display: center;
+    margin: 0 auto;
+  }
+}
+
 @media screen and (min-width: 1024px) {
   .container {
     max-width: 1024px;
   }
+  .feed-image {
+    max-width: 300px;
+    max-height: 300px;
+    padding:3px;
+    border-radius: 5px;
+    display: block;
+    margin: 0 auto;
+  }
 }
-@media (min-width: 768px) and (max-width: 1000px) {
-   .collapse {
-       display: none !important;
-   }
-}
+
 
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
   }
-}
-
-
-.feed-image {
-  max-width: 300px;
-  max-height: 300px;
-  padding:3px;
-  border-radius: 5px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.feed-entry {
-  padding-left: 15px;
-  padding-right: 15px;
-  margin: 40px 0;
-
-  p + h4 {
-    margin-top: 28px;
+  .feed-image {
+    max-width: 300px;
+    max-height: 300px;
+    padding:3px;
+    border-radius: 5px;
+    display: block;
+    margin: 0 auto;
   }
 }
+
+
+// .feed-image {
+//   max-width: 300px;
+//   max-height: 300px;
+//   padding:3px;
+//   border-radius: 5px;
+//   display: block;
+//   margin: 0 auto;
+// }
+
+// .feed-entry {
+//   padding-left: 15px;
+//   padding-right: 15px;
+//   margin: 40px 0;
+
+//   p + h4 {
+//     margin-top: 28px;
+//   }
+// }
+
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  
+  .feed-image {
+    max-width: 250px;
+    max-height: 250px;
+    padding-left:5px;
+    border-radius: 5px;
+    display: block;
+    margin: 0 auto;
+  }
+
+  .feed-entry {
+    padding-left: 5px;
+    padding-right: 5px;
+    margin: 40px 0;
+
+    p + h4 {
+      margin-top: 28px;
+    }
+  }
+
+}
+
+@media  screen and (max-width: 768px) {
+  .feed-image {
+    max-width: 250px;
+    max-height: 250px;
+    padding-left:5px;
+    border-radius: 5px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .feed-entry {
+    padding-left: none;
+    padding-right: none;
+    margin: 0px 0;
+
+    p + h4 {
+      margin-top: 28px;
+    }
+  }
+} 
